# Sy.Forms-Manager

./: .gitignore  pyproject.toml
src/: constants.py  main.py
src/controller/: contact_controller.py
src/database/: database.py  rds_connector.py
src/model/: form_submission.py  form_submission_request.py
src/service/: contact_form_service.py  form_service.py
src/utils/: service_utils.py  validation_utils.py
